# c-linux-chat

./: .gitignore  CMakeLists.txt  README.md  client.c  main.c  server.c
resources/client/: client-config.c  client-config.h  client-lib.c  client-lib.h  client.c  client.h  config.c  config.h
resources/server/: server-config.c  server-config.h  server-lib.c  server-lib.h
shared/: cli-helper.c  cli-helper.h  communication-structs.c  communication-structs.h  communication.c  communication.h  shared.c  shared.h  utils.c  utils.h
